# lok2-web

./: Cargo.toml  index-334edd5efb15feb0.js  index-334edd5efb15feb0_bg.wasm  index-48c923efbbb9e0d8.js  index-48c923efbbb9e0d8_bg.wasm  index-513d6d8cd84ac2b8.js  index-513d6d8cd84ac2b8_bg.wasm  index-bd290cc42d550aba.js  index-bd290cc42d550aba_bg.wasm  index-da1bfd882158b65f.js  index-da1bfd882158b65f_bg.wasm  index-dc3e32a0d0693d4f.js  index-dc3e32a0d0693d4f_bg.wasm  index.html
.github/workflows/: rust.yml
src/: main.rs
