[package]
name = "lok2-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lok2 = {git = "https://github.com/onikenx/lok2", branch = "main"}

# for the interface
yew = "0.18.0"
# for interations
yew_styles = { version="0.11.0", features=["button", "text", "navbar", "forms"] }